
In specflat:
specflat.table: Added "Flavor=Linux"

-------------------------------------------------------------------------------
v4_9_5 (Mar 1, 2002 idlspec2d only) running on IDL 5.3 - 5.5
Built against idlutils v4_9_4, specflat v1_3.

Minor bug fixes for SOS.

BATCH2D: Include 'smear' exposures when generating list of output files.
            (Not doing this caused a crash for plates w/ only smears).
FLUXCORR_NEW: Provide a better test of valid smear correction, fixes PR #2478.
QUICKTRACE: Reverted to doing full trace for flats.  Time saving by only 
            tracing part of the flat image introduces a risk not worth the gain.
SPCOADD_FRAMES: set BADFLUXFACTOR only for extreme smear corrections=20x median 
TRACE320CRUDE:  Fix bug dependent on invvar being set.
            Small change to note number of goodrows in xmask, non-critical.

aporsync_logs.sh: Re-order the files copied so that we get the sdReport
            file first.
sprobot_start: No longer reference $BATCH2DFILE,$BATCH1DFILE, which are
            no longer used.
sprobot_start,sprobot.sh: Added optional $SPROBOT_RSH environment variable
            for specifying the protocol for copying the raw data.
sprobotcopy.sh: Deleted.
sprobotlist.sh: Trimmed version of "sprobotcopy.sh", which only creates
            the plate list and summary files once per day.

-------------------------------------------------------------------------------
v4_9_4 (Feb 28, 2002 idlspec2d+idlutils) running on IDL 5.3 - 5.5
Built against specflat v1_3.

More development of 2D.
Minor bug fixes for SOS.
Runnable version for P-1D.

APOREDUCE: Check how full the disks are for both the input files (sdR images),
            and the outputs.  Issue a warning message if either is >95% full.
ATVRAWSPEC: Display a 2D spectroscopic image with bad columns marked in red.
            This is useful to see that all bad columns have been masked,
            especially when looking at the 2D pixel flats.