@@ -11,7 +11,7 @@ This document explains how to install the idlutils,idlspec2d,specflat products
 needed for reducing SDSS spectroscopic data.  The current (Feb 2002) versions
 of the code are:
 <DL><DD><PRE>
-  idlutils v4_9_4
+  idlutils v4_9_5
   specflat v1_3
   idlspec2d v4_9_5
 </PRE></DD></DL>
@@ -84,7 +84,7 @@ versions of those other products.  An install would then look something like:
 <DL><DD><PRE>
   % UPS_FLAVOR=Linux+2.2 # Necessary if Fermi UPS cannot determine Linux flavor
                          # but could also be "Linux" or "Linux+2".
-  % evilinstall idlutils v4_9_4
+  % evilinstall idlutils v4_9_5
   % evilinstall specflat v1_3
   % evilinstall idlspec2d v4_9_5
 </PRE></DD></DL>
@@ -156,7 +156,7 @@ users) or ~/.bashrc file (for Borne-shell users).
 To avoid typing mistakes, I start by defining environment variables
 for the version numbers:
 <DL><DD><PRE>
-  % IDLUTILS_VERS=v4_9_4
+  % IDLUTILS_VERS=v4_9_5
   % SPECFLAT_VERS=v1_3
   % IDLSPEC2D_VERS=v4_9_5
 </PRE></DD></DL>
@@ -263,7 +263,7 @@ Put them into your home directory (for this example).
 To avoid typing mistakes, I start by defining environment variables
 for the version numbers:
 <DL><DD><PRE>
-  % IDLUTILS_VERS=v4_9_4
+  % IDLUTILS_VERS=v4_9_5
   % SPECFLAT_VERS=v1_3
   % IDLSPEC2D_VERS=v4_9_5
   % setup cvs # Only needed on machines set up by Fermi
